--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,9 +2,15 @@
 requires = ["setuptools >= 77.0.3", "wheel"]
 build-backend = "setuptools.build_meta"
 
+[tool.setuptools]
+include-package-data = true
+
+[tool.setuptools.package-data]
+wbtool_package = ["data/**/*"]
+
 [project]
 name = "wbtool"
-version = "0.0.1"
+version = "0.0.2"
 authors = [{name = "RGFJ", email = "pirozhkova@mail.tau.ac.il"}]
 description = "Annotation of western blot images"
 readme = "README.md"
